crates/solidity/testing/snapshots/bindings_output/using/global/generated/0.6.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
   ╭─[counter.sol:5:1]
   │
 5 │ ╭─▶ function increment(Counter memory _counter) public {}
   ┆ ┆   
 8 │ ├─▶ 
   │ │      
   │ ╰────── Error occurred here.
───╯
References and definitions: 
   ╭─[counter.sol:1:1]
   │
 1 │ struct Counter {
   │        ───┬───  
   │           ╰───── def: 1
 2 │     uint value;
   │          ──┬──  
   │            ╰──── def: 2
───╯
References and definitions: 
   ╭─[main.sol:1:1]
   │
 1 │ import {Counter} from "counter.sol";
   │         ───┬───  
   │            ╰───── def: 3
   │            │     
   │            ╰───── ref: 1
   │ 
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 4
 4 │     function test(Counter memory c) public {
   │              ──┬─ ───┬───        ┬  
   │                ╰──────────────────── def: 5
   │                      │           │  
   │                      ╰────────────── ref: 1
   │                                  │  
   │                                  ╰── def: 6
 5 │         c.increment();
   │         ┬ ────┬────  
   │         ╰──────────── ref: 6
   │               │      
   │               ╰────── unresolved
───╯
